# itracker

./: CHANGELOG.md  isupply.cabal  package.json  trackers.md
app/: Company.hs  Controllers.hs  Helpers.hs  M.hs  Main.hs  MonadConstructor.hs  Tracker.hs  User.hs  companies.md  test.hs  tracker.md  users.csv  users.md
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
