cabal-version:      2.4
name:               isupply
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: help to manage your item's activities

-- A longer description of the package.
description: it's used to record all of the activities of a community/company 
             that helps them to manage their items and also we have help them 
             to manage the data easier

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             irwansyafani
maintainer:         irwan.khaliq10@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable isupply
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.0.0, 
                      directory,
                      split,
                    --   password
    hs-source-dirs:   app
    default-language: Haskell2010
